--- a/css/index.css
+++ b/css/index.css
@@ -141,3 +141,13 @@ button[disabled=disabled], button:disabled {
 .paciente-invalido{
     background-color: lightcoral;
 }
+
+#mensagens-erro {
+    color: red;
+    text-align: center;
+}
+
+#mensagens-erro li {
+    padding: 12px;
+    border: 1px solid red;
+}
