--- a/css/index.css
+++ b/css/index.css
@@ -151,3 +151,18 @@ button[disabled=disabled], button:disabled {
 #mensagens-erro li {
     padding: 8px;
 }
+
+.fadeOut {
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.invisivel {
+    display: none;
+}
+
+#filtrar-tabela {
+	height: 36px;
+	width: 300px;
+	margin-bottom: 16px;
+}
